feat(convert): [CVT-2506] Added ability to edit columns (#5343)
